# qvct

./: .gitignore  CMakeLists.txt  CODING  COPYRIGHT  INSTALL  README  ROADMAP
src/: CMainWindow.cpp  CMainWindow.hpp  CMakeLists.txt  CTimeView.cpp  CTimeView.hpp  QVCT.hpp  QVCTRuntime.cpp  QVCTRuntime.hpp  SAMPLE.cpp  SAMPLE.hpp  main.cpp  main.hpp
src/charts/: CChart.cpp  CChart.hpp  CChartControl.cpp  CChartControl.hpp  CChartGDAL.cpp  CChartGDAL.hpp  CChartGDALElevation.cpp  CChartGDALElevation.hpp  CChartGDALRaster.cpp  CChartGDALRaster.hpp  CChartTable.cpp  CChartTable.hpp
src/data/: CDataCourse.cpp  CDataCourse.hpp  CDataCourseValidity.cpp  CDataCourseValidity.hpp  CDataPosition.cpp  CDataPosition.hpp  CDataPositionValidity.cpp  CDataPositionValidity.hpp  CDataTime.cpp  CDataTime.hpp  CDataTimeValidity.cpp  CDataTimeValidity.hpp  CDataValidity.hpp
src/devices/: CDevice.cpp  CDevice.hpp  CDeviceCreateView.cpp  CDeviceCreateView.hpp  CDeviceDetailView.cpp  CDeviceDetailView.hpp
src/devices/data/: CDeviceDataDop.cpp  CDeviceDataDop.hpp  CDeviceDataFix.cpp  CDeviceDataFix.hpp  CDeviceDataSatellite.cpp  CDeviceDataSatellite.hpp  CDeviceDataSkyView.cpp  CDeviceDataSkyView.hpp  CDeviceDataSource.cpp  CDeviceDataSource.hpp
src/devices/drivers/: CDeviceDriver.cpp  CDeviceDriver.hpp
src/devices/drivers/GpsdAis/: CDeviceGpsdAis.cpp  CDeviceGpsdAis.hpp  CDeviceGpsdAisEditView.cpp  CDeviceGpsdAisEditView.hpp
src/devices/drivers/GpsdGps/: CDeviceGpsdGps.cpp  CDeviceGpsdGps.hpp  CDeviceGpsdGpsEditView.cpp  CDeviceGpsdGpsEditView.hpp
src/devices/drivers/Sample/: CDeviceSample.cpp  CDeviceSample.hpp  CDeviceSampleEditView.cpp  CDeviceSampleEditView.hpp
src/devices/drivers/TcpSbs1/: CDeviceTcpSbs1.cpp  (+3 more)
src/doc/devel/: doxygen.conf.in
src/doc/images/: qvct-devel.xcf  qvct-user.xcf
src/overlays/: COverlay.cpp  COverlay.hpp  COverlayActionsView.cpp  COverlayActionsView.hpp  COverlayBase.cpp  COverlayBase.hpp  COverlayBaseTree.cpp  COverlayBaseTree.hpp  COverlayContainer.cpp  COverlayContainer.hpp  COverlayCourse.cpp  COverlayCourse.hpp  COverlayItem.cpp  COverlayItem.hpp  COverlayObject.cpp  COverlayObject.hpp  COverlayObjectDetailView.cpp  COverlayObjectDetailView.hpp  COverlayObjectEditView.cpp  COverlayObjectEditView.hpp  COverlayObjectPickView.cpp  COverlayObjectPickView.hpp  COverlayPoint.cpp  COverlayPoint.hpp  COverlayText.cpp  COverlayText.hpp  COverlayUrl.cpp  COverlayUrl.hpp  COverlayVisibility.cpp  COverlayVisibility.hpp
src/overlays/device/: CDeviceOverlay.cpp  CDeviceOverlay.hpp  CDeviceOverlayActionsView.cpp  CDeviceOverlayActionsView.hpp  CDeviceOverlayListView.cpp  CDeviceOverlayListView.hpp
src/overlays/dock/: COverlayDetailView.cpp  COverlayDetailView.hpp  COverlayListView.cpp  COverlayListView.hpp
src/overlays/landmark/: CLandmarkContainer.cpp  CLandmarkContainer.hpp  CLandmarkContainerDetailView.cpp  CLandmarkContainerDetailView.hpp  CLandmarkContainerEditView.cpp  CLandmarkContainerEditView.hpp  CLandmarkContainerPickView.cpp  CLandmarkContainerPickView.hpp  CLandmarkOverlay.cpp  CLandmarkOverlay.hpp  CLandmarkOverlayActionsView.cpp  CLandmarkOverlayActionsView.hpp  CLandmarkOverlayListView.cpp  CLandmarkOverlayListView.hpp  CLandmarkPoint.cpp  CLandmarkPoint.hpp  CLandmarkPointDetailView.cpp  CLandmarkPointDetailView.hpp  CLandmarkPointEditView.cpp  CLandmarkPointEditView.hpp
src/overlays/pointer/: CPointerOverlay.cpp  CPointerOverlay.hpp  CPointerPoint.cpp  CPointerPoint.hpp  CPointerPointDetailView.cpp  CPointerPointDetailView.hpp
src/overlays/route/: CRouteContainer.cpp  CRouteContainer.hpp  CRouteContainerDetailView.cpp  CRouteContainerDetailView.hpp  CRouteContainerEditView.cpp  CRouteContainerEditView.hpp  CRouteContainerPickView.cpp  CRouteContainerPickView.hpp  CRouteOverlay.cpp  CRouteOverlay.hpp  CRouteOverlayActionsView.cpp  CRouteOverlayActionsView.hpp  CRouteOverlayListView.cpp  CRouteOverlayListView.hpp  CRoutePoint.cpp  CRoutePoint.hpp  CRoutePointDetailView.cpp  CRoutePointDetailView.hpp  CRoutePointEditView.cpp  CRoutePointEditView.hpp
src/overlays/track/: CTrackContainer.cpp  CTrackContainer.hpp  CTrackContainerDetailView.cpp  CTrackContainerDetailView.hpp  CTrackContainerEditView.cpp  CTrackContainerEditView.hpp  CTrackOverlay.cpp  CTrackOverlay.hpp  CTrackOverlayActionsView.cpp  CTrackOverlayActionsView.hpp  CTrackOverlayListView.cpp  CTrackOverlayListView.hpp  CTrackPoint.cpp  CTrackPoint.hpp  CTrackPointDetailView.cpp  CTrackPointDetailView.hpp  CTrackSubContainer.cpp  CTrackSubContainer.hpp  CTrackSubContainerDetailView.cpp  CTrackSubContainerDetailView.hpp
src/overlays/vessel/: CVesselContainer.cpp  CVesselContainer.hpp  CVesselContainerDetailView.cpp  CVesselContainerDetailView.hpp  CVesselContainerEditView.cpp  CVesselContainerEditView.hpp  CVesselCourseDockView.cpp  CVesselCourseDockView.hpp  CVesselOverlay.cpp  CVesselOverlay.hpp  CVesselOverlayActionsView.cpp  CVesselOverlayActionsView.hpp  CVesselOverlayListView.cpp  CVesselOverlayListView.hpp  CVesselPoint.cpp  CVesselPoint.hpp  CVesselPointDetailView.cpp  CVesselPointDetailView.hpp  CVesselPointEditView.cpp  CVesselPointEditView.hpp  CVesselPositionDockView.cpp  CVesselPositionDockView.hpp  CVesselTargetDockView.cpp  CVesselTargetDockView.hpp
src/resources/: cursors.qrc  icons-16x16.qrc  icons-32x32.qrc  qvct.desktop
src/resources/cursors/: crosshair.psd
src/resources/icons/: COPYRIGHT  COPYRIGHT.FATCOW
src/settings/: CSettings.cpp  CSettings.hpp  CSettingsEditView.cpp  CSettingsEditView.hpp  CSettingsMiscEditView.cpp  CSettingsMiscEditView.hpp  CSettingsUnitsEditView.cpp  CSettingsUnitsEditView.hpp  CSettingsValidityEditView.cpp  CSettingsValidityEditView.hpp
src/units/: CUnitBearing.cpp  CUnitBearing.hpp  CUnitDate.cpp  CUnitDate.hpp  CUnitDistance.cpp  CUnitDistance.hpp  CUnitElevation.cpp  CUnitElevation.hpp  CUnitPosition.cpp  CUnitPosition.hpp  CUnitSpeed.cpp  CUnitSpeed.hpp  CUnitSpeedVertical.cpp  CUnitSpeedVertical.hpp  CUnitTime.cpp  CUnitTime.hpp  CUnitTimeDelta.cpp  CUnitTimeDelta.hpp  CUnitTimeZone.cpp  CUnitTimeZone.hpp
(+67 files in other folders)
